--- a/app/src/main/res/layout/edittextdialog.xml
+++ b/app/src/main/res/layout/edittextdialog.xml
@@ -7,6 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:maxLength="45"
         android:inputType="textPersonName"
         android:hint="Enter input"/>
 
