--- a/app/src/main/res/layout/list_items1.xml
+++ b/app/src/main/res/layout/list_items1.xml
@@ -41,11 +41,25 @@
             android:layout_height="wrap_content"
             android:id="@+id/progressbartxtview"
             android:gravity="center"
-            android:layout_marginBottom="15dp"
             android:textSize="@dimen/subitemsize"
-
-
             ></TextView>
     </LinearLayout>
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/lin3"
+        android:layout_below="@+id/lin2"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="5dp"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/datecreated"
+            android:layout_marginBottom="15dp"
+            android:textSize="12sp"
+            android:textStyle="italic"
+            ></TextView>
+    </LinearLayout>
 </RelativeLayout>
