--- a/app/src/main/res/layout/activity_loginscreen.xml
+++ b/app/src/main/res/layout/activity_loginscreen.xml
@@ -102,7 +102,7 @@
         android:paddingBottom="15dp"
         android:paddingTop="15dp"
         android:paddingLeft="35dp"
-        android:drawableLeft="@drawable/account"
+        app:drawableLeftCompat="@drawable/account"
         android:drawablePadding="15dp"
         android:enabled="false"
         android:paddingRight="35dp"
