--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/Widget.AppCompat.ActionButton"
-        android:src="@drawable/backbutton" />
+        app:srcCompat="@drawable/backbutton" />
     <SearchView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
