--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,6 +9,10 @@
             android:icon="@drawable/notification"
             android:title="Notifications" />
         <item
+            android:id="@+id/spent"
+            android:icon="@drawable/moneyspent"
+            android:title="Weekly spend" />
+        <item
             android:id="@+id/nav_share"
             android:icon="@drawable/ic_menu_share"
             android:title="@string/menu_share" />
